--- a/package.json
+++ b/package.json
@@ -1,13 +1,20 @@
 {
-  "name": "with-yarn-workspaces",
-  "private": true,
-  "workspaces": [
-    "packages/*"
-  ],
-  "scripts": {
-    "dev": "yarn --cwd packages/web-app dev",
-    "build": "yarn --cwd packages/web-app build",
-    "start": "yarn --cwd packages/web-app start"
-  },
-  "license": "MIT"
+	"name": "mono",
+	"private": true,
+	"workspaces": [
+		"packages/*"
+	],
+	"scripts": {
+		"dev:all": "concurrently \"yarn dev:shared\" \"yarn dev:web\" ",
+		"dev:shared": "yarn --cwd packages/shared dev",
+		"dev:web": "yarn --cwd packages/web dev",
+		"build:all": "yarn build:shared && yarn build:web",
+		"build:shared": "yarn --cwd packages/shared build",
+		"build:web": "yarn --cwd packages/web build",
+		"start:web": "yarn --cwd packages/web start"
+	},
+	"license": "MIT",
+	"dependencies": {
+		"concurrently": "^6.1.0"
+	}
 }
